--- a/css/main.css
+++ b/css/main.css
@@ -20,22 +20,30 @@ header {
   padding: 10px;
   text-align: center;
   border: 2px solid navy;
+  border-radius: 25px 25px 25px 25px;
+  box-shadow: 0px 0px 30px gray;
 }
 
 header img {
   margin: 20px;
   width: 200px;
   height: 250px;
+  border-radius: 25px 25px 25px 25px;
+  box-shadow: 0px 0px 30px black;
 }
 
 header h1 {
     margin: 20px;
+    text-shadow: 2px 2px 30px white;
 }
 
 footer {
   background-color: navy;
   color: #fff;
   text-align: center;
+  padding-top: 10px ;
+  border-radius: 25px 25px 25px 25px;
+  box-shadow: 0px 0px 30px gray;
 }
 
 main section h2 {
@@ -47,4 +55,11 @@ main section p {
     text-align: left;
     border-top: 2px solid black;
     margin: 10px;
+}
+
+footer p {
+  color: yellowgreen;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
 }
