--- a/lesson2/css/meduim.css
+++ b/lesson2/css/meduim.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 700px) and (max-width:760px) {
+@media only screen and (min-width: 32.5em) {
     main {
         display: grid;
         grid-template-columns: 1fr 1fr;
