--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -16,7 +16,7 @@ h2 {
 .header-grid {
     display: grid;
     grid-template-columns: 60% 1fr 1fr;
-    grid-template-rows: 1fr fit-content;
+    grid-template-rows: 1fr auto;
     background-color: navy;
     color: whitesmoke;
     height: min-content;
@@ -131,7 +131,7 @@ button :nth-child(2) {
 .placeholder-spotlights {
     border: 1px solid gray;
     color: gray;
-    height: fit-content;
+    height: auto;
     margin: 10px;
     padding: 1rem;
     border-radius: 5px;
