--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,12 +1,12 @@
 @media only screen and (min-width: 64rem) {
     .header-grid {
         grid-template-columns: max-content 1fr min-content;
-        grid-template-rows: 1fr fit-content;
-        height: fit-content;
+        grid-template-rows: 1fr auto;
+        height: auto;
     }
 
     .logo-info {
-        width: fit-content;
+        width: auto;
         margin-right: 5rem;
     }
 
