--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -120,7 +120,7 @@ button :nth-child(2) {
 
 .placeholder-item {
     border: 1px solid gray;
-    color: gray;
+    color: black;
     height: 15rem;
     margin: 10px;
     padding: 1rem;
@@ -130,7 +130,7 @@ button :nth-child(2) {
 
 .placeholder-spotlights {
     border: 1px solid gray;
-    color: gray;
+    color: black;
     height: auto;
     margin: 10px;
     padding: 1rem;
