--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -3,6 +3,7 @@ body {
     padding: 0px;
     border: 0px;
     min-height: 100%;
+    background-color: whitesmoke;
 }
 
 h1 {
@@ -13,6 +14,15 @@ h2 {
     font-size: medium;
 }
 
+.hide{
+    display: none;
+}
+.banner{
+    color: #FFB30F;
+    background-color: #042b423d;
+    grid-column: 1/4;
+}
+
 .header-grid {
     display: grid;
     grid-template-columns: 60% 1fr 1fr;
@@ -21,6 +31,7 @@ h2 {
     color: whitesmoke;
     height: min-content;
     font-family: 'Ubuntu', sans-serif;
+    padding: .8rem;
     padding-bottom: 1rem;
 }
 
@@ -93,6 +104,71 @@ nav ul {
     display: none;
 }
 
+main {
+    display: grid;
+    justify-items: center;
+    padding: .8rem;
+}
+
+.hero {
+    background: url("../images/Main\ land.jpg"), rgba(128, 128, 128, 0.678);
+    background-blend-mode: darken;
+    background-position: center;
+    background-size: cover;
+}
+
+.hero h2,
+.sub h3 {
+    font-size: 2rem;
+    color: whitesmoke;
+}
+
+.hero h2 span,
+.sub h2 {
+    color: #FFB30F;
+}
+
+.hero button {
+    font-family: 'Abel', monospace;
+    background-color: #141516;
+    padding: 1rem;
+    color: orange;
+    box-shadow: 0px 0px 5px black;
+    position: absolute;
+    right: 2rem;
+    bottom: auto;
+}
+
+.sub {
+    background: linear-gradient(#289fe4, #042b42);
+    text-align: center;
+}
+
+.sub p {
+    font-size: larger;
+    font-family: "Abel", monospace;
+    color: whitesmoke;
+}
+
+.weather {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr, 6rem, 1fr, 2px, 1.2fr;
+    max-width: 15rem;
+}
+
+.weather h2 {
+    grid-column: 1/3;
+}
+
+.weather hr {
+    grid-column: 1/3;
+}
+
+.weather img {
+    height: 5rem;
+}
+
 .open ul {
     display: block;
 }
@@ -116,9 +192,20 @@ button :nth-child(2) {
     text-align: center;
     height: 1rem;
     border: 2px solid white;
+    padding: .9rem;
 }
 
-.placeholder-item {
+.block {
+    color: gray;
+    height: 15rem;
+    width: 85%;
+    margin: 10px;
+    padding: 1rem;
+    font-family: 'Abel', sans-serif;
+    box-shadow: 0px 0px 5px gray;
+}
+
+/*.placeholder-item {
     border: 1px solid gray;
     color: black;
     height: 15rem;
@@ -127,24 +214,35 @@ button :nth-child(2) {
     border-radius: 5px;
     font-family: 'PT Sans', sans-serif;
 }
+*/
 
 .placeholder-spotlights {
-    border: 1px solid gray;
+    background: linear-gradient(#289fe4, #042b42);
     color: black;
     height: auto;
     margin: 10px;
     padding: 1rem;
-    border-radius: 5px;
+    width: 90%;
     font-family: 'PT Sans', sans-serif;
 }
 
-.placeholder-spotlights:nth-child(3) {
+#spot-3 {
     display: none;
 }
 
+/*.placeholder-spotlights:nth-child(3) {
+    display: none;
+}*/
+
 .spotlight {
-    border: 1px solid gray;
-    height: 12rem;
+    display: grid;
+        justify-items: center;
+        background: whitesmoke;
+        color: #010d14;
+        width: auto;
+        height: fit-content;
+        box-shadow: 0 0 5px white;
+        padding-bottom: 1rem;
 }
 
 .join {
@@ -178,6 +276,18 @@ footer {
 
 hr {
     width: 90%;
+}
+
+.hero button:hover {
+    transition: all 0.2s;
+    color: #0B7AB8;
+    background-color: black;
+    padding: 1.1rem;
+}
+
+.event:hover {
+    transition: all 0.2s;
+    background: linear-gradient(#088dda, #010d14);
 }
 
 nav ul li a:hover,
