--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -129,7 +129,7 @@ main {
 }
 
 .hero button {
-    font-family: 'Abel', monospace;
+    font-family: 'PT Sans', sans-serif;
     background-color: #141516;
     padding: 1rem;
     color: orange;
@@ -146,14 +146,14 @@ main {
 
 .sub p {
     font-size: larger;
-    font-family: "Abel", monospace;
+    font-family: 'PT Sans', sans-serif;
     color: whitesmoke;
 }
 
 .weather {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr, 6rem, 1fr, 2px, 1.2fr;
+    grid-template-rows: 1fr 6rem 1fr 2px 1.2fr;
     max-width: 15rem;
 }
 
@@ -201,7 +201,7 @@ button :nth-child(2) {
     width: 85%;
     margin: 10px;
     padding: 1rem;
-    font-family: 'Abel', sans-serif;
+    font-family: 'PT Sans',sans-serif;
     box-shadow: 0px 0px 5px gray;
 }
 
