--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -11,8 +11,6 @@
     main{
         padding:10px;
         grid-gap: 20px;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(3, 1fr);
     }
 
     .logo-info {
@@ -43,6 +41,11 @@
         display: none;
     }
 
+    main {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
+
     .placeholder-item {
         margin: 2px;
         border-radius: 2px;
@@ -63,6 +66,10 @@
         grid-column: 1/2;
         grid-row: 3/4;
         width: 85%;
+    }
+
+    .join button{
+        display: block;
     }
 
     .hero {
