--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -111,10 +111,25 @@ main {
 }
 
 .hero {
-    background: url("../images/Main\ land.jpg"), rgba(128, 128, 128, 0.678);
+   /* background: url("../images/Main\ land.jpg"), rgba(128, 128, 128, 0.678);
     background-blend-mode: darken;
     background-position: center;
-    background-size: cover;
+    background-size: cover;*/
+    display: grid;
+    grid-template-columns: repeat(1fr, 2);
+    grid-template-rows: 60% 1fr;
+    overflow: hidden;
+}
+
+main div#hero {
+    padding: 0px;
+}
+
+#heroPhoto {
+    z-index: -1;
+    grid-row: 1/-1;
+    grid-column: 1/3;
+    width: 100%;
 }
 
 .hero h2,
@@ -128,15 +143,17 @@ main {
     color: #FFB30F;
 }
 
-.hero button {
+.hero button#join-btn {
     font-family: 'PT Sans', sans-serif;
     background-color: #141516;
     padding: 1rem;
-    color: orange;
+    margin: 1rem;
+    color: #088DDA;
     box-shadow: 0px 0px 5px black;
-    position: absolute;
-    right: 2rem;
-    bottom: auto;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    height: 3rem;
+    max-width: 18rem;
 }
 
 .sub {
