--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -138,6 +138,11 @@ main div#hero {
     color: whitesmoke;
 }
 
+.hero h2 {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    padding: 1rem;
+}
 .hero h2 span,
 .sub h2 {
     color: #FFB30F;
@@ -215,7 +220,7 @@ button :nth-child(2) {
 .block {
     color: gray;
     height: 15rem;
-    width: 85%;
+   /* width: 85%;*/
     margin: 10px;
     padding: 1rem;
     font-family: 'PT Sans',sans-serif;
@@ -295,7 +300,7 @@ hr {
     width: 90%;
 }
 
-.hero button:hover {
+.hero button#join-btn:hover {
     transition: all 0.2s;
     color: #0B7AB8;
     background-color: black;
