--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -4,20 +4,28 @@
         grid-template-columns: 60% 1fr;
         grid-template-rows: repeat(5, 1fr);
         padding: 2rem;
+        align-items: center;
+    }
+    
+    .block{
+        margin: 0px:
     }
 
     .hero {
         grid-column: 1/3;
         width: 100%;
+        padding: 0px;
     }
 
-    .hero button{
-        right: 10%;
-    }
 
     .news {
         grid-row: 2/3;
         grid-column: 1/3;
+    }
+    
+    .weather p{
+        grid-column:1/3;
+        margin: 3px;
     }
 
     .placeholder-spotlights {
