--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -26,7 +26,7 @@ h2 {
 .header-grid {
     display: grid;
     grid-template-columns: 60% 1fr 1fr;
-    grid-template-rows: 1fr auto;
+    grid-template-rows: 1fr 1rem;
     background-color: navy;
     color: whitesmoke;
     height: min-content;
@@ -107,7 +107,6 @@ nav ul {
 main {
     display: grid;
     justify-items: center;
-    padding: .8rem;
 }
 
 .hero {
@@ -116,7 +115,7 @@ main {
     background-position: center;
     background-size: cover;*/
     display: grid;
-    grid-template-columns: repeat(1fr, 2);
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 60% 1fr;
     overflow: hidden;
 }
@@ -129,7 +128,7 @@ main div#hero {
     z-index: -1;
     grid-row: 1/-1;
     grid-column: 1/3;
-    width: 100%;
+    width: 85vw;
 }
 
 .hero h2,
@@ -241,7 +240,7 @@ button :nth-child(2) {
 .placeholder-spotlights {
     background: linear-gradient(#289fe4, #042b42);
     color: black;
-    height: auto;
+    height: fit-content;
     margin: 10px;
     padding: 1rem;
     width: 90%;
