--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,8 +1,8 @@
 @media only screen and (min-width: 64rem) {
     .header-grid {
         grid-template-columns: max-content 1fr min-content;
-        grid-template-rows: 1fr auto;
-        height: auto;
+        grid-template-rows: 1fr 4rem;
+        height: fit-content;
     }
 
     #header-date{
@@ -14,7 +14,7 @@
     }
 
     .logo-info {
-        width: auto;
+        width: fit-content;
         margin-right: 5rem;
     }
 
@@ -75,7 +75,7 @@
 
     .hero {
         padding: 0px;
-        height: 93%;
+        height: 97%;
         grid-column: 2/4;
         grid-row: 1/3;
         grid-template-columns: 60% 1fr;
