--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap');
+#content {
+    margin: 0;
+}
+
 body {
     margin: 0px;
     padding: 0px;
@@ -10,29 +15,19 @@ h1 {
     font-size: 25px;
 }
 
-h2 {
-    font-size: medium;
+h2,
+h5 {
+    font-family: Open sans;
+    font-size: large;
 }
-
-.hide{
+.hide {
     display: none;
 }
-.banner{
-    color: #FFB30F;
+
+.banner {
+    color: #6bd127;
     background-color: #042b423d;
     grid-column: 1/4;
-}
-
-.header-grid {
-    display: grid;
-    grid-template-columns: 60% 1fr 1fr;
-    grid-template-rows: 1fr 1rem;
-    background-color: navy;
-    color: whitesmoke;
-    height: min-content;
-    font-family: 'Ubuntu', sans-serif;
-    padding: .8rem;
-    padding-bottom: 1rem;
 }
 
 .logo-img {
@@ -46,6 +41,244 @@ h2 {
     display: flex;
     flex-direction: row;
 }
+
+main {
+
+    display: grid;
+    justify-items: center;
+}
+
+button {
+    background: none;
+    border: none;
+}
+
+button span {
+    color: #0B7AB8;
+    font-size: 2rem;
+}
+
+.hero {
+    /*background-blend-mode: darken;*/
+    /*background-position: center;*/
+    /*background-size: cover;*/
+    display: grid;
+    grid-template-columns: repeat(1fr 2);
+    grid-template-rows: 60% 1fr;
+    overflow: hidden;
+}
+main div#hero{padding: 0px;}
+#heroPhoto{
+    z-index: -1;
+    grid-row: 1/-1;
+    grid-column: 1/3;
+    width: 100%;
+}
+
+.hero h2,
+.sub h3 {
+    font-size: 2rem;
+    color: whitesmoke;
+}
+
+
+.hero h2 span,
+.sub h2 {
+
+    color: #FFB30F;
+}
+
+.hero button#join-btn {
+    font-family: 'Open sans', monospace;
+    background-color: #141516;
+    padding: 1rem;
+    margin: 1rem;
+    color: #088dda;
+    box-shadow: 0px 0px 5px black;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    height: 3rem;
+    max-width: 18rem;
+}
+
+.sub {
+    background: linear-gradient(#207cb1, #082d42);
+    text-align: center;
+}
+.sub p {
+    font-size: larger;
+    font-family: "Open sans", monospace;
+    color: whitesmoke;
+}
+
+.weather {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr, 6rem, 1fr, 2px, 1.2fr;
+    max-width: 15rem;
+}
+
+.weather h2 {
+    grid-column: 1/3;
+}
+.weather hr {
+
+    grid-column: 1/3;
+}
+
+.weather img {
+    height: 5rem;
+}
+.open ul {
+    display: block;
+}
+/* Discover Page Main */
+
+.top {
+  padding: 30px 30px 10px 30px;
+}
+
+.top h2,
+.top p {
+  margin-top: 0;
+  color: #012a4a;
+  text-align: center;
+  font-size: 1.6rem;
+}
+
+.top h5 {
+  color: #012a4a;
+  text-align: center;
+}
+
+#gallery {
+  background-color: black;
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 0 15px 30px 15px;
+  grid-gap: 1px;
+}
+
+#gallery img {
+  width: 100%;
+  filter: blur(0em);
+  transition: filter 0.5s;
+  transition: transform 0.2s;
+}
+
+#gallery img[data-src] {
+  width: 100%;
+  filter: blur(0.2em);
+}
+
+#gallery div.blue {
+  background-color: #012a4a;
+  padding: 35px 30px 40px 30px;
+}
+
+#gallery div.light-blue {
+  background-color: #2c7da0;
+  padding: 35px 30px 40px 30px;
+}
+
+#gallery p {
+  color: white;
+  text-align: center;
+  font-size: 1.4rem;
+}
+
+.blue h4,
+.light-blue h4 {
+  color: white;
+  text-align: center;
+  font-size: 1.2rem;
+  margin: 0;
+}
+
+#gallery img:hover {
+  transform: scale(1);
+}
+button.open :nth-child(1) {
+    display: none;
+}
+button.open :nth-child(2) {
+    display: block;
+}
+
+button :nth-child(2) {
+    display: none;
+}
+
+#header-date {
+    margin-top: 3rem;
+    grid-column: 1/4;
+    color: #FFB30F;
+    text-align: center;
+    height: 1rem;
+}
+
+.header-grid {
+    display: grid;
+    grid-template-columns: 60% 1fr 1fr;
+    grid-template-rows: 1fr fit-content;
+    background-color: #132c46;
+    color: whitesmoke;
+    height: max-content;
+    font-family: 'Open sans', monospace;
+    padding-bottom: 1rem;
+}
+
+.block {
+    color: gray;
+    height: 15rem;
+    width: 85%;
+    margin: 10px;
+    padding: 1rem;
+    font-family: 'Open Sans', sans-serif;
+    box-shadow: 0px 0px 5px gray;
+}
+
+.placeholder-spotlights {
+    background: linear-gradient(#289fe4, #042b42);
+    color: gray;
+    height: fit-content;
+    margin: 10px;
+    padding: 1rem;
+    width: 90%;
+    font-family: 'Open sans', sans-serif;
+}
+
+#spot-3 {
+    display: none;
+}
+
+.spotlight {
+    display: grid;
+    justify-items: center;
+    background: whitesmoke;
+    color: #010d14;
+    width: auto;
+    height: fit-content;
+    box-shadow: 0 0 5px white;
+    padding-bottom: 1rem;
+}
+
+.join {
+    display: none;
+}
+
+.logo-img {
+    padding: 2rem 10px 2rem 5px;
+    height: 60%;
+    width: 7rem;
+}
+
+.logo-info {
+    grid-column: 1/2;
+    display: flex;
+    flex-direction: row;
+}
+
 
 .social-links {
     display: flex;
@@ -66,6 +299,125 @@ button span {
     color: #0B7AB8;
     font-size: 2rem;
 }
+/* ----------------Join Uyo Special Club -------------*/
+
+#form {
+    margin: 0 auto 40px auto;
+    max-width: 700px;
+    background-color: white;
+    padding: 10px 30px;
+    border-radius: 5px;
+    padding-bottom: 30px;
+    margin-left: 1px;
+  }
+  
+  #form h3 {
+    font-size: 21px;
+  }
+  
+  .blockview {
+    display: block;
+    padding-top: 25px;
+    color: #012a4a;
+    font-weight: 700;
+  }
+  
+  #membership {
+    font-weight: 500;
+  }
+  
+  .blockview input,
+  textarea {
+    display: block;
+    margin-top: 7px;
+    color: #012a4a;
+    width: 92%;
+    padding: 10px 5px;
+  }
+  
+  .blockview input:focus {
+    background-color: rgb(169, 214, 229);
+    border: 0px;
+  }
+  
+  .blockview input:required {
+    border-right: 5px solid red;
+    border-left: 5px solid red;
+  }
+  
+  .blockview input:required:valid {
+    border-right: 5px solid rgb(60, 190, 0);
+    border-left: 5px solid rgb(60, 190, 0);
+  }
+  
+  .blockview textarea {
+    display: block;
+    margin-top: 5px;
+  }
+  
+  #membership {
+    margin-top: 15px;
+    display: block;
+  }
+  
+  .mtitle {
+    font-weight: 600;
+    font-size: 22px;
+  }
+  
+  .sbs {
+    display: block;
+    padding: 10px 0;
+    font-size: 18px;
+  }
+  
+  input[name="membership"] {
+    margin-right: 10px;
+    accent-color: #012a4a;
+  }
+  
+  #submitBtn {
+    margin-top: 10px;
+    padding: 10px 0;
+    width: 96%;
+    border: none;
+    font-size: 17px;
+    background-color: #012a4a;
+    border-radius: 4px;
+    color: white;
+  }
+  
+  .benefit h5 {
+    margin: 5px 0;
+    font-size: 17px;
+  }
+  
+  .benefit {
+    margin-top: 10px;
+    background-color: #a9d6e5;
+    padding: 5px;
+    display: none;
+    border-radius: 5px;
+    width: 93%;
+  }
+  
+  .sbs:first-child {
+    margin-top: 15px;
+  }
+  
+  td {
+    font-size: 18px;
+  }
+  
+  .thanks {
+    margin: 40px auto 60px auto;
+    max-width: 700px;
+    background-color: white;
+    padding: 10px 30px;
+    border-radius: 5px;
+    padding-bottom: 30px;
+  }
+  
 
 nav {
     grid-row: 2/3;
@@ -74,7 +426,7 @@ nav {
 }
 
 .active {
-    color: #FFB30F;
+    color: #f0ede7;
 }
 
 nav ul {
@@ -82,6 +434,7 @@ nav ul {
     padding: 0px;
     margin: 0px;
     margin-top: 2rem;
+
 }
 
 nav ul li {
@@ -93,7 +446,7 @@ nav ul li a {
     width: 100%;
     color: whitesmoke;
     text-decoration: none;
-    font-family: 'Satisfy', cursive;
+    font-family: 'Georgia', sans-serif;
     align-self: center;
     text-align: center;
     padding-top: 1rem;
@@ -101,93 +454,13 @@ nav ul li a {
 }
 
 nav ul {
+
+
+
     display: none;
-}
 
-main {
-    display: grid;
-    justify-items: center;
-}
 
-.hero {
-   /* background: url("../images/Main\ land.jpg"), rgba(128, 128, 128, 0.678);
-    background-blend-mode: darken;
-    background-position: center;
-    background-size: cover;*/
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 60% 1fr;
-    overflow: hidden;
-}
 
-main div#hero {
-    padding: 0px;
-}
-
-#heroPhoto {
-    z-index: -1;
-    grid-row: 1/-1;
-    grid-column: 1/3;
-    width: 85vw;
-}
-
-.hero h2,
-.sub h3 {
-    font-size: 2rem;
-    color: whitesmoke;
-}
-
-.hero h2 {
-    grid-column: 1/3;
-    grid-row: 1/2;
-    padding: 1rem;
-}
-.hero h2 span,
-.sub h2 {
-    color: #FFB30F;
-}
-
-.hero button#join-btn {
-    font-family: 'PT Sans', sans-serif;
-    background-color: #141516;
-    padding: 1rem;
-    margin: 1rem;
-    color: #088DDA;
-    box-shadow: 0px 0px 5px black;
-    grid-column: 2/3;
-    grid-row: 2/3;
-    height: 3rem;
-    max-width: 18rem;
-}
-
-.sub {
-    background: linear-gradient(#289fe4, #042b42);
-    text-align: center;
-}
-
-.sub p {
-    font-size: larger;
-    font-family: 'PT Sans', sans-serif;
-    color: whitesmoke;
-}
-
-.weather {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr 6rem 1fr 2px 1.2fr;
-    max-width: 15rem;
-}
-
-.weather h2 {
-    grid-column: 1/3;
-}
-
-.weather hr {
-    grid-column: 1/3;
-}
-
-.weather img {
-    height: 5rem;
 }
 
 .open ul {
@@ -209,61 +482,39 @@ button :nth-child(2) {
 #header-date {
     margin-top: 3rem;
     grid-column: 1/4;
-    color: #FFB30F;
+    color: #46bb3b;
     text-align: center;
     height: 1rem;
-    border: 2px solid white;
-    padding: .9rem;
+    border: 1px solid white;
 }
 
-.block {
-    color: gray;
-    height: 15rem;
-   /* width: 85%;*/
-    margin: 10px;
-    padding: 1rem;
-    font-family: 'PT Sans',sans-serif;
-    box-shadow: 0px 0px 5px gray;
-}
-
-/*.placeholder-item {
+.placeholder-item {
     border: 1px solid gray;
-    color: black;
+    color: gray;
     height: 15rem;
     margin: 10px;
     padding: 1rem;
     border-radius: 5px;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
-*/
 
 .placeholder-spotlights {
-    background: linear-gradient(#289fe4, #042b42);
-    color: black;
+    border: 1px solid gray;
+    color: gray;
     height: fit-content;
     margin: 10px;
     padding: 1rem;
-    width: 90%;
-    font-family: 'PT Sans', sans-serif;
+    border-radius: 5px;
+    font-family: 'Open Sans', sans-serif;
 }
 
-#spot-3 {
+.placeholder-spotlights:nth-child(3) {
     display: none;
 }
-
-/*.placeholder-spotlights:nth-child(3) {
-    display: none;
-}*/
 
 .spotlight {
-    display: grid;
-        justify-items: center;
-        background: whitesmoke;
-        color: #010d14;
-        width: auto;
-        height: fit-content;
-        box-shadow: 0 0 5px white;
-        padding-bottom: 1rem;
+    border: 1px solid gray;
+    height: 12rem;
 }
 
 .join {
@@ -274,21 +525,23 @@ footer {
     padding-top: 2rem;
     display: flex;
     flex-direction: column;
-    background-color: navy;
+    background-color: #132c46;
     color: whitesmoke;
     align-items: center;
     text-align: center;
+    margin: 0;
 }
 
 .first-half {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .second-half {
-    font-family: 'Satisfy', cursive;
+
+    font-family: 'Open Sans', monospace;
 }
 
 .footer-logo {
@@ -299,7 +552,7 @@ hr {
     width: 90%;
 }
 
-.hero button#join-btn:hover {
+.hero button:hover {
     transition: all 0.2s;
     color: #0B7AB8;
     background-color: black;
@@ -312,11 +565,13 @@ hr {
 }
 
 nav ul li a:hover,
+
 .social-links img:hover {
-    color: #FFB30F;
+   color: #f1e8d4;
     background-color: #0B7AB8;
 }
 
+
 button span:hover {
-    color: #FFB30F;
+     color: #f1e8d4;
 }
