--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,16 +1,8 @@
 @media only screen and (min-width: 64rem) {
     .header-grid {
         grid-template-columns: max-content 1fr min-content;
-        grid-template-rows: 1fr 4rem;
+        grid-template-rows: 1fr fit-content;
         height: fit-content;
-    }
-
-    #header-date{
-        padding: 5px;
-    }
-    main{
-        padding:10px;
-        grid-gap: 20px;
     }
 
     .logo-info {
@@ -44,7 +36,6 @@
     main {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(3, 1fr);
-        grid-gap: 10px;
     }
 
     .placeholder-item {
@@ -60,32 +51,25 @@
     .weather {
         grid-column: 1/2;
         grid-row: 2/3;
-        width: 88%;
     }
 
     .join {
         grid-column: 1/2;
         grid-row: 3/4;
-        width: 85%;
     }
 
-    .join button{
-        display: block;
-    }
-
-    .hero {
+    .hero{
         padding: 0px;
         height: 97%;
         grid-column: 2/4;
         grid-row: 1/3;
         grid-template-columns: 60% 1fr;
+        
     }
-
     .hero h2{
         padding: 1rem;
         font-size: 3rem;
     }
-
     .hero button{
         display: block;
         margin-right: 1rem;
@@ -99,40 +83,23 @@
 
     .news {
         grid-column: 2/4;
-        width: 95%;
-        padding: 1.2rem;
         grid-row: 3/4;
     }
 
     .placeholder-spotlights {
-        width: 90%;
-        height: 97%;
+        height: 100%;
         grid-column: 4/5;
         grid-row: 1/4;
         padding: 10px;
-        margin: 10px;
-        height: 96%;
         display: grid;
         grid-template-rows: repeat(3, 1fr);
-        grid-template-columns: 1fr;
+        margin: 2px;
+        height: 96%;
     }
 
     .spotlight {
-        margin-top: 1rem;
         width: 100%;
         height: 100%;
         margin: 0px;
     }
-
-    #spot-3 {
-        display: block;
-        display: grid;
-        justify-items: center;
-        background: whitesmoke;
-        color: #010d14;
-        width: auto;
-        height: fit-content;
-        box-shadow: 0 0 5px white;
-        padding-bottom: 1rem;
-        }
 }
