--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,14 +1,9 @@
-@media only screen and (min-width: 35rem) {
+@media only screen and (min-width: 40rem) {
     main {
         display: grid;
         grid-template-columns: 60% 1fr;
         grid-template-rows: repeat(5, 1fr);
         padding: 2rem;
-        align-items: center;
-    }
-    
-    .block{
-        margin: 0px;
     }
 
     .hero {
@@ -16,66 +11,65 @@
         width: 100%;
         padding: 0px;
     }
-
+    
+    .hero button{
+    right: 10%;    
+    }
 
     .news {
         grid-row: 2/3;
         grid-column: 1/3;
     }
-    
-    .weather p{
-        grid-column:1/3;
-        margin: 3px;
-    }
 
     .placeholder-spotlights {
         grid-row: 3/4;
         grid-column: 1/3;
-        display: grid;
+        display: flex;
         grid-template-columns: repeat(2, 1fr);
-        width: 100%;
+        flex-direction: row;
     }
 
     .spotlight {
         width: 100%;
-        margin: 5px;
+        margin: 10px;
     }
+    .spotlight img{
 
-    .spotlight img {
-        width: 100%;
+        width: 100%;    
     }
-
-    .join button {
-        background-color: #45494E;
+    .join button{
         padding: 1rem;
         width: 100%;
-        color: orange;
-        box-shadow: 0px 0px 5px black;
+        color:aquamarine;    
+        box-shadow: 0px 0px 5px black;    
     }
 
-    .join {
-        width: 100%;
-        display: grid;
-        grid-template-rows: 4rem 1fr;
-        align-items: center;
-        justify-items: center;
-        grid-column: 1/3;
-        grid-row: 4/5;
-        background: url("../images/background.jpg") rgba(13, 12, 27, 0.938);
-        background-blend-mode: soft-light;
-        background-size: cover;
-    }
+    
+.join {
 
+    width: 100%;
+    display: grid;
+    grid-template-rows: 4rem 1fr;
+    align-items: center;
+    justify-items: center;
+    grid-column: 1/3;
+    grid-row: 4/5;    
+    background: url("../images/join\ us.webp") rgba(13, 12, 27, 0.938);
+    background-blend-mode: soft-light;    
+    background-size: cover;
+
+    }
     .join button:hover {
-        background-color: #0B7AB8;
-        font-weight: bolder;
+    background-color: #0B7AB8;
+    font-weight: bolder;
+   
     }
-
+    
     .join p {
-        text-align: center;
-        font-size: larger;
-        color: whitesmoke;
-        width: 70%;
+    text-align: center;
+    font-size: larger; 
+    color: whitesmoke;
+    width: 70%;    
     }
 
     .first-half {
@@ -111,10 +105,9 @@
     .second-half span {
         padding: 0px 4px 0px 4px;
     }
-
     .news{
         grid-column: 1/3;
-        grid-row:5/6;
+        grid-row:5/6;        
         width: 100%;
-    }
+        }
 }
