--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -43,6 +43,8 @@
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(3, 1fr);
         grid-gap: 10px;
+        padding-top: 2rem;
+        margin: 0px;
     }
 
     .placeholder-item {
@@ -53,22 +55,24 @@
     .event {
         grid-column: 1/2;
         grid-row: 1/2;
-        /* height: 80%;
-        margin-top: 12px; */
+        width: 90%;
+        height: 84%;
     }
 
     .weather {
         grid-column: 1/2;
         grid-row: 2/3;
-        width: 80%;
+        width: 90%;
+        height: 84%;
     }
 
     .join {
         grid-column: 1/2;
         grid-row: 3/4;
-        width: 85%;
+        width: 90%;
+        height: 80%;
     }
-    .join button{
+    .join a{
         display: block;
     }
 
@@ -88,6 +92,7 @@
     .hero h2{
         padding: 1rem;
         font-size: 3rem;
+        height: fit-content;
     }
     .hero button{
         display: block;
@@ -98,15 +103,16 @@
         width: 100%;
         margin-bottom: 30px;
         transition: all 0.2s;
+        z-index: 7;
 
     }
     .news {
         grid-column: 2/4;
-        width: 95%;
+        width: 94%;
         padding: 1.2rem;
         grid-row: 3/4;
     }
-
+    
     .placeholder-spotlights {
         width: 90%;
         height: 97%;
@@ -130,11 +136,8 @@
         display: block;
         display: grid;
         justify-items: center;
-        background: rgb(214, 238, 245);
-        color: #010d14;
         width: auto;
-        height: fit-content;
-        padding-bottom: 1rem;
+        height: 90%;
         }
 
     /* //////////////////////////////////////////// */
@@ -169,6 +172,9 @@
      form{
          width: 30rem;
      }
+     .main-join-area{
+        max-width: 50rem;
+     }
      fieldset{
          width: 28rem;
      }
@@ -178,11 +184,15 @@
 
      /* ////////////////////////// */
      /* Directory */
-     .directory-container{
+     .grid-directory{
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 1rem;
         padding: 2rem;
+     }
+     .flex-directory{
+        display: grid;
+        gap:0px;
      }
      .company:hover{
         padding: 0.3rem;
@@ -190,8 +200,29 @@
         color: whitesmoke;
         transition: all 0.3s;
      }
+     .list-company{
+        font-size: large;
+     }
+     .list-company:hover{
+        padding:0.625rem;
+        text-align: left;
+        background-color: white;
+        color: #141516;
+    }
      .company{
         padding:10px;
      }
+
+     /* Contact */
+
+     iframe{
+        width: 90%;
+     }
+     .contact-form{
+        width: 60vw;
+    }
+    .contact-form .join-btn{
+        width: 50%;
+    }
     
 }
